# A_Z_test

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
app/: main.py
app/dal/: base_dal.py  result.py  territory.py
app/database/: db_base_config.py  db_prod_config.py  models.py
app/routers/: common_http_exceptions.py  dependencies.py  territory.py
app/schemas/: error_response.py  territory.py
migrations/: env.py
migrations/versions/: 9c00658729f8_.py
tests/: config.py  conftest.py
tests/dal/: test_result.py  test_territory.py
tests/integrations/: helpers.py  test_result_model.py  test_territory_model.py
